--- a/myhockeyapp/views/players_stats.pug
+++ b/myhockeyapp/views/players_stats.pug
@@ -58,7 +58,7 @@ block content
                     div.panel-heading
                         h3.panel-title 
                             i.fa.fa-bar-chart-o 
-                                | Goals, Assists, Points, Penalty In Minutes
+                                | Goals, Assists, Points, Penalty In Minutes By Player
                     div.panel-body
                         div(id='chart00' class='c3chart') 
                         script(type='text/javascript').
