changed chart icon to line

--- a/myhockeyapp/views/player_stats.pug
+++ b/myhockeyapp/views/player_stats.pug
@@ -122,7 +122,7 @@ block content
                 div.panel.panel-primary
                     div.panel-heading
                         h3.panel-title 
-                            i.fa.fa-area-chart 
+                            i.fa.fa-line-chart 
                                 | Goals (PowerPlay, ShortHand, EmptyNet), Assists, Penalty In Minutes By Date
                     div.panel-body                
                         div(id='chart10' class='c3chart')                                      
