--- a/myhockeyapp/views/layout.pug
+++ b/myhockeyapp/views/layout.pug
@@ -65,7 +65,7 @@ html(lang="en")
                   i.fa.fa-angle-right    
           li.dropdown
             a.dropdown-toggle(href="#", data-toggle="dropdown")
-              i.fa.fa-bell.fa-fw 
+              i.fa.fa-tasks.fa-fw 
               i.fa.fa-caret-down 
             ul.dropdown-menu.dropdown-tasks
               li
