--- a/myhockeyapp/views/players_stats.pug
+++ b/myhockeyapp/views/players_stats.pug
@@ -42,7 +42,7 @@ block content
         div.col-lg-12
             div.panel.panel-default
                 div.panel-heading
-                    | Game Stats
+                    | Player Stats
                 div.panel-body
                     div.dataTable_wrapper
                         table#datatable-gamestats.table.table-hover
