changed the home title to dashboard

--- a/myhockeyapp/views/game_entry.pug
+++ b/myhockeyapp/views/game_entry.pug
@@ -33,7 +33,7 @@ block content
                 li
                     i.fa.fa-dashboard
                     a(href="/") 
-                        | Hockey Stats
+                        | Dashboard
                 li
                     i.fa.fa-list-ul
                     a(href="/gameentry") 
