--- a/myhockeyapp/views/player_stats.pug
+++ b/myhockeyapp/views/player_stats.pug
@@ -33,7 +33,7 @@ block content
                 li
                     i.fa.fa-dashboard
                     a(href="/") 
-                        | Hockey Stats
+                        | Dashboard
                 li
                     i.fa.fa-line-chart
                     a(href="/playerstats/#{player_id}") 
