--- a/myhockeyapp/views/team_stats.pug
+++ b/myhockeyapp/views/team_stats.pug
@@ -33,7 +33,7 @@ block content
                 li
                     i.fa.fa-dashboard
                     a(href="/") 
-                        | Hockey Stats
+                        | Dashboard
                 li
                     i.fa.fa-users
                     a(href="/teamstats") 
